--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -7,16 +7,14 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1  # v2 does not have submodules option now
-        # with:
-        #   submodules: true
+      - uses: actions/checkout@v4 # v2 does not have submodules option now
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.62.2'
+          hugo-version: "0.62.2"
 
       - name: Build
         run: hugo --minify
